# 3-python-package-exercise-team-fizzbuzz-1

./: .pypirc  Pipfile  README.md  pyproject.toml
.github/workflows/: build.yaml
examples/: example.py  walkthrough.py
src/virtual_pet/: __main__.py  default_species.py  default_weapons.py  example.py  pet.py  species.py  utilities.py  weapons.py
tests/: test_pet.py  test_virtual_pet.py
