[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
  "termcolor"
]
name = "virtual_pet"
description = "A virtual pet game."
version = "0.2.8"
authors = [
  { name="Dhiyaa Al Jorf", email= "da2863@nyu.edu" },
  { name= "Firas Darwish", email= "fbd2014@nyu.edu" },
  { name= "Shubhi Upadhyay", email= "su2132@nyu.edu"}
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "package", "build", "tutorial"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/nyu-software-engineering/python-package-example"
"Repository" = "https://github.com/nyu-software-engineering/python-package-example.git"
"Bug Tracker" = "https://github.com/nyu-software-engineering/python-package-example/issues"

[project.scripts]
virtual_pet = "virtual_pet.__main__:main"